[gd_scene load_steps=4 format=3 uid="uid://b3vj3jmn5omwm"]

[ext_resource type="Script" uid="uid://78apyg1j4wa" path="res://scripts/interactables/killzone/killzone.gd" id="1_tuno7"]
[ext_resource type="AudioStream" uid="uid://c2jba66yfa3xq" path="res://assets/audio/sfx/player/Crash3.wav" id="2_qqwcv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2giey"]
size = Vector2(128, 128)

[node name="killzone" type="Area2D" unique_id=2126346459]
script = ExtResource("1_tuno7")

[node name="collision_shape_2d" type="CollisionShape2D" parent="." unique_id=256304045]
shape = SubResource("RectangleShape2D_2giey")

[node name="crash_audio" type="AudioStreamPlayer" parent="." unique_id=2063998965]
stream = ExtResource("2_qqwcv")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="crash_audio" to="." method="_on_crash_audio_finished"]
